@@ -131,3 +131,11 @@ HORAS TRABALHADAS: 7h
 - Implementação de webservice para cadastro de feeds
 
 HORAS TRABALHADAS: 8h
+
+==========
+30/03/2009
+==========
+
+- Implementação de webservice para cadastro de feeds
+
+HORAS TRABALHADAS: 3h
